@@ -213,6 +213,19 @@ extern "C"
 	extern seaudit_sort_t *seaudit_sort_by_command(int direction);
 
 /**
+ * Instruct a model to sort AVC messages by the name, alphabetically.
+ * Non-AVC messages will be placed below AVC ones.
+ *
+ * @param direction Direction to sort.  Non-negative for ascending,
+ * negative for descending.
+ *
+ * @return Sort object for this criterion, or NULL upon error.  The
+ * caller is responsible for calling seaudit_sort_destroy()
+ * afterwards.
+ */
+	extern seaudit_sort_t *seaudit_sort_by_name(int direction);
+
+/**
  * Instruct a model to sort AVC messages by the path, alphabetically.
  * Non-AVC messages will be placed below AVC ones.
  *
