@@ -39,7 +39,7 @@ typedef enum preference_field
 	SUSER_FIELD, SROLE_FIELD, STYPE_FIELD,
 	TUSER_FIELD, TROLE_FIELD, TTYPE_FIELD,
 	OBJCLASS_FIELD, PERM_FIELD,
-	EXECUTABLE_FIELD, COMMAND_FIELD,
+	EXECUTABLE_FIELD, COMMAND_FIELD, NAME_FIELD,
 	PID_FIELD, INODE_FIELD, PATH_FIELD, OTHER_FIELD
 } preference_field_e;
 
